[tool.poetry]
name = "factoryboy-edsl"
version = "0.1.0"
description = "Factoryboy helpers for Elasticsearch-dsl"
authors = ["Matthieu Etchegoyen <etchegom@gmail.com>"]
maintainers = ["Matthieu Etchegoyen <etchegom@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/etchegom/factoryboy-edsl"
repository = "https://github.com/etchegom/factoryboy-edsl"
documentation = "https://github.com/etchegom/factoryboy-edsl"
keywords = ["elasticsearch-dsl", "elasticsearch", "factory-boy", "factoryboy"]
classifiers = [
  "Environment :: Web Environment",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
packages = [{ include = "factory_edsl" }]

[tool.poetry.dependencies]
python = "^3.8"
factory-boy = "^3.2"
elasticsearch-dsl = "^8.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
skip-magic-trailing-comma = "false"
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
select = [
  "F",   # Pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  "C90", # mccabe
  "I",   # isort
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "TID", # flake8-tidy-imports
  "PGH", # pygrep-hooks
  "INP", # flake8-no-pep420
]
line-length = 100
show-fixes = true
fixable = ["ALL"]
unfixable = ["B"]
target-version = "py311"
exclude = [".venv"]
ignore = ["FBT003"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
case-sensitive = true
known-third-party = [
  "elasticsearch_dsl",
  "factory",
  "factory_edsl"
]
split-on-trailing-comma = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
required-imports = ["from __future__ import annotations"]
